Fixed text overlapping in task card in Calendar

--- a/styles/calendar.less
+++ b/styles/calendar.less
@@ -614,12 +614,9 @@
 		line-height: 1.1;
 	}
 }
-.fc-custom-task .fc-content .fc-time {
-	text-indent: 18px;
-}
-
+.fc-custom-task .fc-content .fc-time,
 .fc-custom-task .fc-content .fc-title:first-child {
-	text-indent: 18px;
+	margin-left: 18px;
 }
 
 .fc-content .fc-title{
